[package]
name = "sounding-bufkit"
version = "0.14.3"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
description = """Library to parse and load Bufkit sounding files."""
repository = "https://github.com/rnleach/sounding-bufkit.git"
readme = "README.md"
license-file = "LICENSE"
exclude = ["**/*.rs.bk",".gitignore",".vscode/**/*", "tests/**/*", "tags", "example_data/**/*", "bufkit_parameters.txt"]
categories = ["science"]
keywords = ["weather","sounding","meteorology", "skew-t", "Bufkit"]
edition = "2018"
publish=false

[dependencies]
metfor = "^0.7.4"
sounding-analysis = {git="https://github.com/rnleach/sounding-analysis.git", tag="v0.15.1"}
chrono="^0.4"
optional = "^0.5.0"

